--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -24,10 +24,15 @@
             <p id = "textError"> <%= passwordsNotMatching %></p><br>
             <input type="text" id = "inputError" placeholder="Repeat Password" name="repeatPassword" required><br>
             <p id = "textError"> <%= passwordsNotMatching %></p><br>
-          <% } else { %>
-            <input type="text" placeholder="Password" name="password" required><br>
-            <input type="text" placeholder="Repeat Password" name="repeatPassword" required><br>
-          <% } %>
+            <% } else if (minLength.length > 0){ %>
+              <input type="password" id = "inputError" placeholder="Password" name="password" required><br>
+              <p id = "textError"> <%= minLength %></p><br>
+              <input type="password" id = "inputError" placeholder="Repeat Password" name="repeatPassword" required><br>
+              <p id = "textError"> <%= minLength %></p><br>
+            <% } else { %>
+              <input type="password" placeholder="Password" name="password" required><br>
+              <input type="password" placeholder="Repeat Password" name="repeatPassword" required><br>
+            <% } %>
         <button type="Submit">Submit</button>
     </form>
   </div>
