update readme, removed background, revrted font

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,9 @@
 h1 {
-    font-family: Handlee;
+  font-family: 'Lato', sans-serif;
+
     font-size: 40px;
     text-align: center;
-    color: white;
+    color: rgb(0, 0, 0);
     font-weight: bolder;
 }
 
@@ -19,7 +20,8 @@ input {
 
 #textError {
     color:red;
-    font-family: Handlee;
+    font-family: 'Lato', sans-serif;
+
     font-weight:bolder;
     font-size: 15px;
     text-align: center;
@@ -33,10 +35,11 @@ div{
 
 a {
     text-decoration: none;
-    font-family: Handlee;
+    font-family: 'Lato', sans-serif;
+
     font-weight:bolder;
     font-size: 15px;
-    color: rgb(235, 235, 235);
+    color: rgb(0, 0, 0);
     text-align: center;
 }
 
@@ -53,7 +56,8 @@ a {
 }
 
 button {
-    font-family: Handlee;
+  font-family: 'Lato', sans-serif;
+
     font-weight:bolder;
     color: white;
     width: 300px;
@@ -95,14 +99,16 @@ hr {
 #LetUsHelpYou {
     line-height: 20px;
     margin: 0px;
-    font-family: Handlee;
+    font-family: 'Lato', sans-serif;
+
     font-weight: normal;
     font-size: 32px;
     color:white;
 }
 
 #SecurityQuestionText{
-    font-family: Handlee;
+  font-family: 'Lato', sans-serif;
+
     font-weight: normal;
     font-size: 40px;
     margin-bottom:0px;
@@ -110,7 +116,8 @@ hr {
 
 #logout-button{
     text-align: right;
-    font-family: Handlee;
+    font-family: 'Lato', sans-serif;
+
     font-weight: bold;
 }
 
@@ -141,44 +148,8 @@ hr {
     width: 280px;
     height: 40px;
   }
- 
-#LeafBorderLeft {
-    /* display: inline; */
-    position: absolute;
-    width: 90px;
-    margin-top: -80px;
-    margin-left: -60%;
-}
 
-#LeafBorderRight {
-    /* display: inline; */
-    position: absolute;
-    width: 90px;
-    margin-top: -80px;
-    margin-left: 35%;
-}
-.login-screen { 
-    background: url(/images/login-background.jpg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
 
-  .register-screen { 
-    background: url(/images/register-background.jpg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-  .reset-screen { 
-    background: url(/images/reset-background.jpg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
   #myPieChart {
     display: inline-block;
     width: 100%;
