--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html class="login-screen">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Health App Login</title>
 
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel = "stylesheet" type="text/css" href = "css/style.css" >
 </head>
 <body>
