--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,46 +122,75 @@ hr {
 }
 
 .topnav {
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: rgb(140, 223, 158);
-    color: white;
-  }
-  
-  .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-  }
-  select {
-    width: 280px;
-    height: 40px;
-    margin: 0 0 .5em 0;
-  }
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav form {
+  float: right; /* Float the form to the left */
+}
+
+.topnav a {
+  float: right; /* Float the link to the left */
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: rgb(140, 223, 158);
+  color: white;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/* Adjust spacing and alignment */
+#logout-report-buttons {
+  padding: 10px;
+}
+
+#logout-report-buttons::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+select {
+  width: 280px;
+  height: 40px;
+  margin: 0 0 .5em 0;
+}
 
 
-  #myPieChart {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-  #scatter-plot {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-  #title-text{
-    color: #4e73df;
-    padding-top: 2%;
-  }
+#myPieChart {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+#scatter-plot {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+#title-text{
+  color: #4e73df;
+  padding-top: 2%;
+}
+
+#logo-container {
+  position: absolute;
+  top: 15px;
+  left: 10px;
+  z-index: 1; /* Ensure the logo appears above other content */
+}
+
+/* CSS style for the logo text */
+#logo-container h1 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 40px;
+  color: #fff;
+}
