--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div>
-    <br><br><img src = "/images/LeafLogo.png" width = 130%></src>
+    <br><br><img src = "/images/Logo.png" width = 130%></src>
     <h1> Create Account </h1>
     <form action="/register/Register" method="POST">
 
