--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Health App Login</title>
+  <title>Health Monitor App</title>
 
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -13,7 +13,7 @@
 <body>
 
   <div>
-    <br><br><img src = "/images/LeafLogo.png" width = 180%></src>
+    <br><br><img src = "/images/Logo.png" width = 180%></src>
     <h1> Member Login </h1>
     <form action="/index/Index" method="POST">
       <% if (invalidLogin.length > 0) { %>
