--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Health App Login</title>
+  <title>Health Monitor App</title>
 
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
